--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "mf://TODO"
+title: "mf://TODO/"
 subtitle: "Michael Forrest's Museum of Unfinished Projects"
 pygments: true
 exclude: ['designs']
